deployment-files/kustomize/alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indy-node-alertmanager
spec:
  selector:
    app: indy-node-alertmanager
  ports:
    - name: "9093"
      port: 9093
      targetPort: 9093
